--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -121,3 +121,108 @@ button{
     align-items: center;
     margin: 15px;
 }
+
+#registro button.botonreg{
+    background-color: white;
+    color: #282c8c;
+    transition: 0.1s linear;
+    bottom: 100px;
+}
+
+#registro button.botonreg:hover{
+    background-color: #165373;
+    color: white;
+}
+
+/* INPUTS */
+
+/*INPUTS*/
+
+input{
+    border: none;
+    border-bottom: 1px solid #d2d2d2;
+
+    font-size: 24px;
+    line-height: 1.3;
+    width: 100%;
+    border-width: 0.0625rem;
+    padding: 0.1875rem 0.3125rem;
+    margin: 0 6px 16px 0;
+    min-height: 40px;
+    max-height: none;
+}
+
+input:focus-visible{
+    border: 1px transparent solid !important;
+}
+
+label{
+    font-size: 17px;
+    line-height: 1.5;
+    display: inline-block;
+    margin-bottom: 3px;
+}
+
+button{
+    width: 100%;
+    height: 40px;
+    padding: 0px 12px 2px 12px;
+    background-color: #268cc0;
+    color: white;
+    font-size: 14px;
+}
+
+button:hover{
+    background-color: #165373;
+}
+
+div.registro{
+    text-align: center;
+}
+
+a.registro{
+    padding: 12px;
+    padding-left: 110px;
+    padding-right: 110px;
+    background-color: #268cc0;
+    color: white;
+    font-size: 14px;
+    text-decoration: none;
+    border: black 2px solid;
+    transition: 0.1s linear;
+}
+
+a.registro:hover{
+    background-color: #165373;
+}
+
+a.registro.blanco{
+    background-color: white;
+    color: #282c8c;
+    transition: 0.1s linear;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
+    position: relative;
+    bottom: 70px;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+a.registro.blanco:hover{
+    color: white;
+}
+
+a.registro.res{
+    background-color: white;
+    color: #268cc0;
+    position: relative;
+    left: 30px;
+    bottom: -30px;
+}
+
+a.registro.res:hover{
+    background-color: #165373;
+    color: white;
+}
