--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -226,3 +226,33 @@ a.registro.res:hover{
     background-color: #165373;
     color: white;
 }
+
+/*##########################*/
+/*##### --- HEADER --- #####*/
+/*##3#######################*/
+
+nav.header{
+    height: 87px;
+    width: 99%;
+    position: absolute;
+    top: 0;
+    background-color: #268cc0;
+    box-shadow: 0px 1px 60px rgb(2 2 2 / 60%);
+    margin-left: 7px;
+}
+
+div.redes{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 15px;
+    flex-wrap: nowrap;
+}
+
+div.redes a{
+    margin-right: 20px;
+}
+
+nav.header p{
+    color: white;
+    margin-right: 20px;
+}
