--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -27,22 +27,31 @@ a:hover{
     transition: 0.3s; 
 }
 /*SE OCULTA LA BARRA DE SCROLL PERO NO LA DESHABILITA*/
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     display: none;
 }
-
+ */
 body{
     background-color: #f5f5f5;
-    height: inherit;
     margin-top: 100px;
-    width: 75%;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
+    height: 100%;
+
 }
+
+body .padrecontenedor :first-child{
+}
+
+body .padrecontenedor{
+}
+
 
 html{
     background-color: #aac2ce;
-    height: -webkit-fill-available;
+height: -webkit-fill-available;
+
 }
 
 /*############*/
@@ -172,6 +181,7 @@ div.padrecontenedor{
     align-items: center;
     flex-direction: column;
     height: 600px;
+    height: -webkit-fill-available;
 }
 
 #info div.padrecontenedor{
@@ -421,39 +431,39 @@ header div.header div.logo img{
 /*##### --- FOOTER --- #####*/
 /*##3#######################*/
 
-footer{
+div.footer{
     height: 120px;
     width: 100%;
-    z-index: 0;
-    position: fixed;
-    bottom: 0;
+    /* z-index: 0; */
+    position: absolute;
+    bottom: -100px;
     left: 0;
-    right: 0;
+    /* right: 0; */
     background-color: #6d9db5;
     box-shadow: 0px 1px 60px rgb(2 2 2 / 35%);
     color: #dce0e2;
 }
 
-footer div.footer_sup{
+div.footer div.footer_sup{
     display: flex;
     flex-direction: column;
     align-items: center;
     
 }
 
-footer div.footer_inf{
+div.footer div.footer_inf{
     display: flex;
     justify-content: center;
     flex-direction: row;
 }
 
-footer div.footer_inf a{
+div.footer div.footer_inf a{
     margin: 0px 10px;
     text-decoration: none;
     color: #dce0e2;
 }
 
-footer div.footer_inf a:hover{
+div.footer div.footer_inf a:hover{
     color: #165373;
     transition: 0.3s; 
 }
@@ -481,33 +491,71 @@ body#cita div.padrecontenedor{
 /*## INFORMACION PERSONAL ##*/
 /*##########################*/
 
-body#infopac a.registro{
-    margin-top: 20px;
+#infopers {
+    background-color: #f4f4f4;
+    color: #333;
 }
 
-body#infopac table tr:nth-child(odd){
-    background-color: #deeaf6;
+#infopers .padrecontenedor {
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-body#infopac table tr:nth-child(even){
-    background-color: #f6f8fc;
+#infopers h2 {
+    text-align: center;
+    margin-bottom: 20px;
 }
 
-body#infopac table td:nth-child(odd){
-    text-align: right;
-    font-weight: 900;
-
+#infopers .form {
+    margin-bottom: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-body#infopac table td{
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
+.linea_form {
+    margin-bottom: 15px;
 }
 
-/*RESTABLECER PASSWORD*/
+#infopers label {
+    display: block;
+    margin-bottom: 5px;
+}
 
-body#pass{
-    background-color: unset;
+#infopers input[type="text"],
+#infopers input[type="email"],
+#infopers input[type="date"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 20px;
+    width: 300px;
+}
+
+#infopers .btn-submit {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#infopers .reset-password {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    color: #007bff;
+    margin-top: 10px;
+}
+
+#infopers .reset-password:hover {
+    text-decoration: underline;
 }
