--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -27,10 +27,10 @@ a:hover{
     transition: 0.3s; 
 }
 /*SE OCULTA LA BARRA DE SCROLL PERO NO LA DESHABILITA*/
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
     display: none;
 }
- */
+
 body{
     background-color: #f5f5f5;
     margin-top: 100px;
@@ -726,4 +726,10 @@ body#infocitas table td{
 .eliminarpaciente button.eliminar{
     width: 300px !important;
     margin-top: 50px;
+}
+
+
+button.seleccion{
+    width: unset !important;
+    
 }
