Resolucion de algunos errores y cambios en el estilo

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -37,7 +37,6 @@ body{
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    height: 100%;
     padding-top: 50px;
 }
 
@@ -46,7 +45,12 @@ body div.padrecontenedor > :nth-child(1){
 }
 
 body .padrecontenedor{
-height: -webkit-fill-available;
+    height: -webkit-fill-available;
+    padding-bottom: 150px !important;
+}
+
+body.corto{
+    height: -webkit-fill-available !important;
 }
 
 
@@ -190,7 +194,7 @@ div.padrecontenedor{
 }
 
 #info div.padrecontenedor{
-    height: 200px !important;
+    padding-bottom: 150px;
 }
 
 #infocitas div.padrecontenedor{
@@ -438,11 +442,14 @@ header div.header div.logo img{
 
 div.footer{
     height: 120px;
-    width: 100%;
+    /* left: revert-layer; */
+    width: -webkit-fill-available;
     /* z-index: 0; */
-    position: absolute;
-    bottom: -25%;
-    left: 0;
+    margin-left: -15%;
+    position: fixed;
+    /* margin-left: -250px; */
+    bottom: 0%;
+    /* left: 0; */
     /* right: 0; */
     background-color: #6d9db5;
     box-shadow: 0px 1px 60px rgb(2 2 2 / 35%);
