--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -105,6 +105,16 @@ input:read-only{
     background-color: lightgrey;
 }
 
+#errores{
+    color: red;
+    position: absolute;
+    top: 0px;
+    left: 15px;
+    font-weight: 900;
+    font-size: 30px;
+    width: 100%;
+}
+
 /*############*/
 /*## INICIO ##*/
 /*############*/
@@ -282,7 +292,6 @@ button{
     display: flex;
     align-items: center;
     flex-direction: row;
-    height: 600px;
     margin-top: 30px;
     justify-content: space-evenly;
 }
@@ -374,17 +383,15 @@ a.registro:hover{
 }
 
 a.registro.blanco{
-    background-color: white;
-    color: #282c8c;
     transition: 0.1s linear;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
     width: 20%;
-    position: relative;
     bottom: 70px;
     padding-left: 0px;
     padding-right: 0px;
+    margin-top: 20px;
 }
 
 a.registro.blanco:hover{
@@ -784,7 +791,7 @@ button.seleccion{
 /*#######################*/
 
 input#barraBusqueda{
-    width: 25px;
+    width: 25px !important;
     min-height: 23px !important;
     font-size: 14px;
     transition: 0.4s;
@@ -796,7 +803,7 @@ input#barraBusqueda{
 }
 
 input#barraBusqueda:focus{
-    width: 250px;
+    width: 250px !important;
     min-height: 23px !important;
     font-size: 14px;
     background: unset;
