Fix par de errores

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -91,6 +91,10 @@ body .padrecontenedor{
     padding-bottom: 150px !important;
 }
 
+body.tratamientopac{
+    height: 100%;
+}
+
 body.corto{
     height: -webkit-fill-available !important;
 }
